# SkillCornerHackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  parse.py  position_analysis.py  pyproject.toml
analysis/: ball_chaos.py  buckets.py  defensive_line.py  indicators.py  line_to_line_acceleration.py  player_clusters.py  position_change.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/nginx/: default.conf
frontend/scripts/: extract-timeline-moments.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FrameIndicatorSpider.tsx  LivePitchPlayerBar.tsx  MatchTimeline.tsx  MomentumChart.tsx  PhaseBreakdownChart.tsx  PitchView.tsx  ScrollToTop.tsx  VideoPlayer.tsx
frontend/src/components/concept/: IndicatorExplorer.tsx  LiveChaosStrip.tsx  (+2 more)
frontend/src/context/: PlaybackContext.tsx
frontend/src/hooks/: useMatchTracking.ts
frontend/src/lib/: bestClusterByBundleFrame.ts  matchTeamColors.ts  playback.ts  possessionByBundleFrame.ts  scoreAtBundleFrame.ts
frontend/src/pages/: ConceptPage.tsx  LandingPage.tsx  MatchDashboardPage.tsx  MatchLabPage.tsx
opendata-master/src/: README.md
parsing/: dynamic_events.py  match.py  phases_of_play.py  physical_data.py  tracking.py
pipeline/: export_phase_breakdown.py  export_player_mapping.py  extract_timeline_moments.py  run_all.py
plot/: phase_line_to_line_acceleration_plot.py  phase_position_change_plot.py  position_change_plot.py
scripts/: export_phase_breakdown.py  export_player_mapping.py
(+11 files in other folders)
