[project]
name = "skillcorner-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.12.5",
    "typing_extensions>=4.12.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = "error"
